--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "8.5.1",
     "mariadb": "3.0.0",
     "morgan": "1.10.0",
+    "mysql2": "^2.3.3",
     "sequelize": "6.21.3"
   },
   "devDependencies": {
