Se modificaron el .env y la conexion

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-HOSTNAME=sql10.freesqldatabase.com
-DATABASENAME=sql10507303
-DATABASEUSER=sql10507303
-DATABASEPASSWORD=VgUBgFGJ8M
+HOSTNAME=sql10.freemysqlhosting.net
+DATABASENAME=sql10514399
+DATABASEUSER=sql10514399
+DATABASEPASSWORD=fqjUm2EeC3
 DATABASEPORT=3306
 PRIVATE_KEY=123456
