--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "sequelize": "6.21.3"
   },
   "devDependencies": {
+    "eslint": "^8.22.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "nodemon": "2.0.19"
   }
 }
