configuración de jest para testing, variables de entorno de pruebas y se refactorizó el método de conexión a la base de datos

--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ DATABASEUSER=sql10514399
 DATABASEPASSWORD=fqjUm2EeC3
 DATABASEPORT=3306
 PRIVATE_KEY=123456
+
+DATABASENAME_TEST=sql10514781
+DATABASEUSER_TEST=sql10514781
+DATABASEPASSWORD_TEST=j2RZcF64Qa
