--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js",
-    "seed": "node ./seed/seed.js"
+  "jest": {
+    "verbose": true,
+    "extensionsToTreatAsEsm": [".test.js"]
+  }
+,  "scripts": {
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "seed": "node ./seed/seed.js",
+    "test": "cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules npx jest --verbose"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +19,7 @@
   "dependencies": {
     "bcryptjs": "2.4.3",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "10.0.0",
     "express": "4.17.1",
     "express-validator": "6.12.1",
@@ -27,6 +33,8 @@
     "eslint": "^8.22.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "nodemon": "2.0.19"
+    "jest": "^28.1.3",
+    "nodemon": "2.0.19",
+    "supertest": "^6.2.4"
   }
 }
