Se cambiaron las comillas simples por dobles, se agregaron credenciales para acceso a base de datos remotoy cambiaron los nombres de las rutas

--- a/.env
+++ b/.env
@@ -1,10 +1,18 @@
-HOSTNAME=sql10.freemysqlhosting.net
-DATABASENAME=sql10514399
-DATABASEUSER=sql10514399
-DATABASEPASSWORD=fqjUm2EeC3
+# VARIABLES FOR MYSQL SERVER
+HOSTNAME=45.7.228.229
 DATABASEPORT=3306
-PRIVATE_KEY=123456
 
-DATABASENAME_TEST=sql10514781
-DATABASEUSER_TEST=sql10514781
-DATABASEPASSWORD_TEST=j2RZcF64Qa
+
+# MYSQL CREDENTIALS VPS DEV
+DATABASENAME=sigaf_dev
+DATABASEUSER=root
+DATABASEPASSWORD=root
+
+
+# MYSQL CREDENTIALS VPS TEST
+DATABASENAME_TEST=sigaf_test
+DATABASEUSER_TEST=root
+DATABASEPASSWORD_TEST=root
+
+#JWT SECRET KEY
+PRIVATE_KEY=123456
