--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   }
 ,  "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "dev-test": "cross-env NODE_ENV=test nodemon index.js",
     "start": "cross-env NODE_ENV=production node index.js",
     "seed": "node ./seed/seed.js",
-    "test": "cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules npx jest --verbose"
+    "test": "cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules npx jest --verbose --detectOpenHandles --silent"
   },
   "keywords": [],
   "author": "",
