Se agrego funcion para borrar base de datos al terminar test

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ DATABASEPORT=3306
 
 
 # MYSQL CREDENTIALS VPS DEV
-DATABASENAME=sigaf_dev
+DATABASENAME=sigaf_test
 DATABASEUSER=root
 DATABASEPASSWORD=root
 
