--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dev-test": "cross-env NODE_ENV=test nodemon index.js",
     "start": "cross-env NODE_ENV=production node index.js",
     "seed": "node ./seed/seed.js",
-    "test": "cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules node ./seed/seed.js npx jest --verbose --detectOpenHandles"
+    "test": "cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules npx jest --verbose --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
