Se agrego middlewares de validaciones de campos a las rutas de actividades y verificacion de jwt

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ DATABASEPORT=3306
 
 
 # MYSQL CREDENTIALS VPS DEV
-DATABASENAME=sigaf_test
+DATABASENAME=sigaf_dev
 DATABASEUSER=root
 DATABASEPASSWORD=root
 
