--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "10.0.0",
     "express": "4.17.1",
+    "express-list-routes": "^1.1.3",
     "express-validator": "6.12.1",
     "jsonwebtoken": "8.5.1",
     "mariadb": "3.0.0",
